# MicroDb

./: .gitignore  .travis.yml  README.md  build.gradle  build_android_setup.sh  leveldb.meson.build  meson.build  meson_options.txt  mingw_cross.txt  premake4-mac.lua  settings.gradle
.utils/: publish.sh
MicroDB.xcodeproj/: project.pbxproj
MicroDB.xcworkspace/: contents.xcworkspacedata
MicroDB.xcworkspace/xcshareddata/: MicroDB.xccheckout
MicroDBLib.xcodeproj/: project.pbxproj
MicroDBTest.xcodeproj/: project.pbxproj
android-testapp/: build.gradle
android-testapp/src/main/: AndroidManifest.xml
android-testapp/src/main/java/com/devsmart/examples/intro/: IndexTest.java  Test1.java
android-testapp/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
include/: meson.build  microdb.h
include/microdb/: microdb.h  serialize.h  status.h  value.h
java/: meson.build
java/binding/: build.gradle  meson.build  settings.gradle
java/binding/android/: build.gradle
java/binding/android-testapp/: build.gradle
java/binding/android-testapp/src/main/: AndroidManifest.xml
java/binding/android/src/main/jni/: log.h  microdb.cpp
java/binding/com/devsmart/microdb/: Test.java
java/binding/microdb-android/: build.gradle
java/binding/microdb-desktop/: build.gradle
java/binding/microdb-processor/: build.gradle
java/binding/microdb-processor/src/test/resources/pkg/project/: SimpleDBModel.java
java/binding/microdb-runtime/: build.gradle
java/binding/processor/: build.gradle
java/binding/runtime/: build.gradle
java/binding/src/main/java/com/devsmart/microdb/: DBAnnotationProcessor.java  DBObject.java  MicroDB.java  MicroDBObject.java  ProxyFileGenerator.java  Utils.java
java/binding/src/test/java/com/devsmart/microdb/: ProxyWriterTest.java
java/binding/src/test/resources/pkg/project/: SimpleDBModel.java
java/jni/: common.h  driver.cpp  iterator.cpp  log.h  meson.build  microdb.cpp
microdb-android-sqlite/: build.gradle
microdb-android-sqlite/src/androidTest/: AndroidManifest.xml
microdb-android-sqlite/src/androidTest/java/com/devsmart/microdb/: SqliteDriverTest.java
microdb-android-sqlite/src/main/: AndroidManifest.xml
microdb-android-sqlite/src/main/java/com/devsmart/microdb/: AndroidSqliteDBBuilder.java  AndroidSqliteDriver.java
microdb-android/src/main/: AndroidManifest.xml
microdb-android/src/main/java/com/devsmart/microdb/: NativeDriver.java
microdb-desktop/: build.gradle
microdb-desktop/src/main/java/com/devsmart/microdb/: Loader.java  NativeDriver.java
microdb-generator/: build.gradle
microdb-generator/genTest/com/devsmart/: SimpleDBModel.java
microdb-generator/genTest/org/example/: ExtendObj.java  MyDBObj.java
microdb-generator/src/main/antlr/: MicroDB.g4  microdb.g4
microdb-generator/src/main/java/com/devsmart/microdb/: CompilerContext.java  Generator.java  JavaCodeGenerator.java  NodeVisitor.java  SemPass1.java  SemPass2.java
microdb-generator/src/test/java/com/devsmart/microdb/: CmdLineTest.java  CompilerTest.java  JavaWriterTest.java  TestParse.java
microdb-generator/src/test/resources/com/devsmart/microdb/: bad1.dbo  bad2.dbo  bad3.dbo  codeblock.dbo  simpledbmodel.dbo
microdb-generator/src/test/resources/org/example/: ExtendObj.java  MyDBObj.java  test.dbo
microdb-gradleplugin/: build.gradle
microdb-gradleplugin/src/main/groovy/com/devsmart/microdb/: CompileTask.groovy  DBOCompilerPlugin.groovy  MicroDBCompileTask.groovy
microdb-gradleplugin/src/test/groovy/com/devsmart/microdb/: PluginTest.groovy
microdb-gradleplugin/src/test/java/com/devsmart/microdb/: PluginTest.java
microdb-mapdbdriver/: build.gradle
microdb-mapdbdriver/src/main/java/com/devsmart/microdb/: MapDBDBBuilder.java  MapDBDriver.java
microdb-mapdbdriver/src/test/java/com/devsmart/microdb/: MapDBDriverTest.java  ReadWriteTest.java  StringIndexTest.java  VersionManagerTest.java
microdb-mapdbdriver/src/test/java/example/: MyDBObj.java
microdb-processor/: build.gradle
microdb-processor/src/test/java/com/devsmart/microdb/: DatasetTest.java  DatasetWriterTest.java  ProxyWriterTest.java
microdb-processor/src/test/java/pkg/project/: MyDatum.java
microdb-processor/src/test/resources/com/devsmart/microdb/: SimpleDBModel_pxy.java
microdb-processor/src/test/resources/pkg/project/: MicroDBSimpleDataSet.java  SimpleDBModel.java  SimpleDataSet.java
microdb-runtime/: build.gradle
microdb-runtime/src/main/java/com/devsmart/microdb/: ChangeListener.java  Cursor.java  DBBuilder.java  DBCallback.java  DBIterator.java  DBObject.java  Dataset.java  Datum.java  DefaultChangeListener.java  Driver.java  Emitter.java  KeyIterator.java  Link.java  LinkList.java  MapDBDriver.java  MapFunction.java  MicroDB.java  ObjRangeIterator.java  ObjectIterator.java  Row.java  Transaction.java  Utils.java  VersionManager.java
microdb-runtime/src/test/java/com/devsmart/microdb/: CustomIndexTest.java  MapDBDriverTest.java  ReadWriteTest.java  StringIndexTest.java  VersionManagerTest.java
microdb-runtime/src/test/java/example/: ExtendObj.java  MyDBObj.java
microdb-test/: build.gradle
microdb-test/src/main/java/com/devsmart/microdb/: DriverTest.java
src/: dbfunctions.cpp  dbfunctions.h  dbimpl.cpp  dbimpl.h  driver.h  file.h  index.cpp  index.h  indexutils.cpp  leveldbdriver.cpp  leveldbdriver.h  log.h  membuffer.cpp  membuffer.h  meson.build  microdb.h  portable_endian.h  serialize.cpp  serializerhelper.h  sha256.cpp  sha256.h  ubjsonhelper.h  ubjsonreader.cpp  ubjsonwriter.cpp  unqlitedriver.cpp  unqlitedriver.h  utils.cpp  utils.h  uuid.cpp  uuid.h  uuid_generic.cpp  uuid_lex.l  uuid_mac.cpp  uuidlex.l  value.cpp  vectorclock.cpp  vectorclock.h  viewquery.cpp  viewquery.h  viewquery.l  (+2 more)
src/include/microdb/: microdb.h  status.h
subprojects/: gtest.wrap  leveldb.wrap  unqlite.wrap
test/: db.cpp  leveldbdriver.cpp  meson.build  test1.cpp  ubjsonserialize.cpp  unqlitedriver.cpp  uuid_test.cpp  value_tests.cpp  vectorclock_test.cpp  viewquery.cpp
testproject/: build.gradle
testproject/src/main/java/org/example/: test.dbo
(+78 files in other folders)
